# meridian

./: README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/routes/: __init__.py  entities.py  health.py  stream.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/stream/: __init__.py  hub.py  redis_bus.py  schemas.py
backend/scripts/: benchmark_stream_latency.py  redis_subscriber.py
backend/sql/: init.sql
backend/tests/: conftest.py  test_health.py  test_ingest_and_live.py  test_stream_fanout.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: live-map-client.tsx  live-map.tsx
frontend/lib/: types.ts
